--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 .map {
@@ -9,9 +10,31 @@ body {
   height: 100vh;
 }
 
+.disaster-info {
+  position: absolute;
+  background-color: rgba(0,0,0,0.6);
+  border-radius: 12px;
+  right: 50px;
+  top: 80px;
+  width: 380px;
+  min-height: 190px;
+  padding: 20px;
+  font-size: 18px;
+  color: #fff;
+}
+
+.disaster-info ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.disaster-info li {
+  padding: 5px 0;
+}
+
 .location-marker {
   font-size: 2rem;
-  color: rgb(16, 16, 109);
+  color: red;
 }
 
 .loader {
@@ -20,6 +43,24 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+}
+
+.header {
+  background-color: blue;
+  position: fixed;
+  color: #fff;
+  padding: 10px;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 100;
+}
+
+.header h1 {
+  font-size: 24px;
+  text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
 .loader img {
